# vibro_tactile_toolbox

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  data_collected_experiments.ods  launch_VTT_core.sh  package.xml  parse_rosbags.sh  requirements.txt  setup.py
config/: 1x4.yaml  4x1.yaml  lego.yaml  nist.yaml  yk_creator_lego_pose.tf
convenience-scripts/: launch-all-drivers.sh  launch_RTC_drivers.sh  launch_VTT_core.sh  launch_yk_creator.sh  make_lego_dataset.sh  make_nist_dataset.sh  train_all_channels.sh
convenience_scripts/: make_lego_dataset.sh  make_nist_dataset.sh  systems_check.sh  test_trained_outcome_and_terminator_models.sh  train_outcome_and_terminator_models.sh
docker/: Dockerfile  Dockerfile.nvidia_ros  Dockerfile.orbbec_ros  Dockerfile.orbbec_ros_vibro_tactile  Dockerfile.realsense_and_sounddevice_ros  Dockerfile.realsense_ros  Dockerfile.realsense_ros_vibro_tactile  Dockerfile.robotiq_mm_ros  Dockerfile.ros_desktop_full  Dockerfile.sounddevice_ros  Dockerfile.sounddevice_ros_vibro_tactile  Dockerfile.vibro_tactile_toolbox  Dockerfile.vibro_tactile_toolbox_prereq  Dockerfile.yk-god  README.md  build_docker.sh  docker-compose.yml  new_terminal.sh  requirements.txt  run  run_docker.sh  vibro_tactile_entrypoint.sh  vibrotactile.env
launch/: collect_lego_audio_data.launch  collect_lego_tactile_data.launch  collect_nist_audio_data.launch  collect_nist_tactile_data.launch  collect_tactile_data.launch  collect_tactile_data_new.launch  compressed_image_cropped_republisher.launch  femto_bolt.launch  go_home_skill.launch  lego_outcomes.launch  mfi_twin_lego.launch  mfi_twin_nist.launch  nist_lego_demo.launch  nist_outcomes.launch  orbbec.launch  outcomes.launch  realsense.launch  realsense_and_sounddevice.launch  reset_joints.launch  save_hande_pose.launch  save_lego_pose.launch  sounddevice.launch  terminators.launch  test_lego_audio_outcome.launch  test_nist_audio_outcome.launch  vibro_tactile_toolbox.launch  yk_god_lego.launch  yk_god_nist.launch
model_training/: README.md  VTTDataset.py  create_outcome_training_dataset.py  create_terminator_training_dataset.py  create_training_dataset.py  process_audio_spectrograms.py  test_trained_audio_outcome_model.py  test_trained_audio_outcome_model_CNN.py  test_trained_audio_outcome_model_mel.py  test_trained_audio_recovery_model.py  test_trained_audio_recovery_model_CNN.py  test_trained_audio_recovery_model_mel.py  test_trained_audio_terminator_model.py  test_trained_audio_terminator_model_mel.py  test_trained_model_CNN.py  train_audio_model_CNN.py  train_audio_outcome_model.py  train_audio_outcome_model_CNN.py  train_audio_outcome_model_mel.py  train_audio_recovery_model.py  train_audio_recovery_model_CNN.py  train_audio_terminator_model.py  train_audio_terminator_model_CNN.py
msg/: AudioOutcomeRepub.msg  BoundingBox.msg  FtsOutcomeRepub.msg  SkillParams.msg  TerminationSignal.msg  VisionOutcomeRepub.msg
scripts/: audio_detector.py  audio_outcome_republisher.py  collect_lego_audio_data.py  collect_lego_tactile_data.py  collect_nist_audio_data.py  collect_nist_tactile_data.py  collect_tactile_data _old.py  collect_tactile_data.py  collect_tactile_data_new.py  collect_tactile_data_test.py  compressed_lego_detector.py  (+20 more)
(+135 files in other folders)
